--- a/src/style.css
+++ b/src/style.css
@@ -143,3 +143,37 @@ body{
 	border-radius: 5px;
 	border: 1px solid #cccccc; 
 }
+td{
+	border: 1px solid black;
+	text-align: center;
+	border-collapse: none;
+	font-size: 20px;
+	width: 10%;
+}
+#cart th{
+	border: 2px solid #3e9cbf;
+	color: black;
+	font-size: 20px;
+	border-collapse: collapse;
+
+}
+table{
+	border-collapse: collapse;
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+tr{
+	padding-top: 20px;
+}
+.dlt{
+	color: red;
+}
+table th{
+	background-color: burlywood;
+}
+#emptyCart{
+	color: red;
+	text-decoration: none;
+	background: white;
+}
